# libtr50

./: COPYING  ChangeLog  Makefile.am  Makefile.in  Makefile.vxworks  Makefile.w32  README  cleanup  config.h.in  configure  configure.ac  configure.bat  configure.w32
MSVC/: resource.h  tr50.rc  tr50.sln  tr50.vcxproj  tr50.vcxproj.filters
MSVC/tr50_sample/: tr50_sample.vcxproj
MSVC/tr50_sysinfo/: tr50_sysinfo.vcxproj
examples/: Makefile  Makefile.am  Makefile.in  linux.sysinfo.c  sample.main.c  windows.sysinfo.c
include/: Makefile  Makefile.am  Makefile.in
include/he910/: at.h
include/ils/: mutex.debug.h
include/tr50/: error.h  tr50.h  worker.h
include/tr50/internal/: tr50.h
include/tr50/mqtt/: mqtt.h
include/tr50/util/: blob.h  compress.h  dictionary.h  event.h  json.h  log.h  memory.h  mutex.h  platform.h  platform.h.in  swap.h  tcp.h  thread.h  time.h
src/: Makefile  Makefile.am  Makefile.in  tr50.api.async.c  tr50.c  tr50.command.c  tr50.config.c  tr50.mailbox.c  tr50.message.c  tr50.method.c  tr50.payload.c  tr50.pending.c  tr50.stats.c  tr50.worker.c  tr50.worker.extended.c
src/mqtt/: mqtt.async.c  mqtt.c  mqtt.msg.c  mqtt.qos.c  mqtt.recv.c
src/util/common/: tr50.blob.c  tr50.json.c
src/util/freebsd/: freebsd.blob.c  freebsd.event.c  freebsd.log.c  freebsd.memory.c  freebsd.mutex.c  freebsd.tcp.c  freebsd.tcp_proxy.c  freebsd.thread.c  freebsd.time.c
src/util/he910/: TelitBuild.txt  he910.blob.c  he910.compress.c  he910.json.c  he910.log.c  he910.memory.c  he910.mutex.c  he910.mutex.simple.c  he910.tcp.c  he910.thread.c  he910.time.c
src/util/he910/wrappers/: at.cmd.c  at.info.c  at.main.c  at.parser.c  at.processor.c  at.storage.c
src/util/ils/: ils.blob.c  ils.compress.c  ils.event.c  ils.log.c  ils.memory.c  ils.mutex.c  ils.tcp.c  ils.tcp_proxy.c  ils.tcp_ssl.c  ils.thread.c  ils.time.c
src/util/linux/: linux.blob.c  linux.compress.c  linux.event.c  linux.log.c  linux.memory.c  linux.mutex.c  linux.tcp.c  linux.tcp_proxy.c  linux.tcp_ssl.c  linux.thread.c  linux.time.c
src/util/stub/: blob.c  event.c  log.c  memory.c  mutex.c  tcp.c  thread.c  time.c
src/util/win32/: win32.blob.c  win32.compress.c  win32.event.c  win32.log.c  win32.memory.c  win32.mutex.c  win32.tcp.c  win32.tcp_proxy.c  win32.tcp_ssl.c  win32.thread.c  win32.time.c
