nobase_include_HEADERS = \
	tr50/error.h \
	tr50/tr50.h \
	tr50/worker.h \
	tr50/internal/tr50.h \
	tr50/mqtt/mqtt.h \
	tr50/util/blob.h \
	tr50/util/compress.h \
	tr50/util/dictionary.h \
	tr50/util/event.h \
	tr50/util/json.h \
	tr50/util/log.h \
	tr50/util/memory.h \
	tr50/util/mutex.h \
	tr50/util/platform.h \
	tr50/util/swap.h \
	tr50/util/tcp.h \
	tr50/util/thread.h \
	tr50/util/time.h
